--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.0.2",
     "expo": "~48.0.18",
+    "expo-camera": "~13.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.2",
@@ -26,16 +28,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10",
-    "@react-native-async-storage/async-storage": "1.17.11",
     "react-native-svg": "13.4.0",
-    "expo-camera": "~13.2.1"
+    "react-native-web": "~0.18.10",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@types/react-native-dotenv": "^0.2.0",
     "jest": "^29.2.1",
     "jest-expo": "~48.0.0",
     "react-test-renderer": "18.2.0",
