--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "@react-native-community/datetimepicker": "6.7.3",
+    "expo-av": "~13.2.1",
+    "expo-image": "~1.0.1",
+    "expo-image-manipulator": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
