--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.0.2",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
     "expo-camera": "~13.2.1",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.1.1",
+    "expo-image": "~1.0.1",
+    "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.2",
@@ -40,11 +44,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "react-native-webview": "11.26.0",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "expo-av": "~13.2.1",
-    "expo-image": "~1.0.1",
-    "expo-image-manipulator": "~11.1.1"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
