--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "expo-clipboard": "~4.1.2"
+    "expo-clipboard": "~4.1.2",
+    "expo-video-thumbnails": "~7.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
