--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-camera": "~13.2.1",
+    "expo-clipboard": "~4.1.2",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
@@ -30,24 +31,26 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
+    "expo-video-thumbnails": "~7.2.1",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-country-codes-picker": "^2.3.3",
     "react-native-country-flag": "^1.1.9",
     "react-native-dotenv": "^3.4.8",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-modal-datetime-picker": "^17.0.0",
+    "react-native-paper-dates": "^0.18.12",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "react-native-webview": "11.26.0",
-    "expo-clipboard": "~4.1.2",
-    "expo-video-thumbnails": "~7.2.1"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
