--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-firebase/app": "^18.2.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
+    "expo-build-properties": "~0.6.0",
     "expo-camera": "~13.2.1",
     "expo-clipboard": "~4.1.2",
     "expo-firebase-recaptcha": "^2.3.1",
@@ -51,7 +53,7 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "expo-build-properties": "~0.6.0"
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
