--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "expo-build-properties": "~0.6.0",
     "expo-camera": "~13.2.1",
     "expo-clipboard": "~4.1.2",
+    "expo-dev-client": "~2.2.1",
+    "expo-firebase-core": "^6.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
@@ -33,6 +35,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.18.11",
     "expo-video-thumbnails": "~7.2.1",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
@@ -52,8 +55,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
-    "react-native-webview": "11.26.0",
-    "expo-dev-client": "~2.2.1"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
