--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-firebase/app": "^18.2.0",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.31.0",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-build-properties": "~0.6.0",
@@ -32,6 +33,7 @@
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.5.2",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-system-ui": "~2.2.1",
@@ -54,6 +56,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0"
   },
