--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^18.2.0",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.31.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-build-properties": "~0.6.0",
@@ -58,7 +59,9 @@
     "react-native-svg": "13.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.18.10",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "expo-file-system": "~15.2.2",
+    "expo-screen-orientation": "~5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
